# Viceroy

./: .gitignore  APP_BUNDLE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.tauri  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKREF.md  README.md  SETUP.md  TROUBLESHOOTING.md  VICEROY_FEATURES.md  build.rs  build.sh  build_app.sh  dev.sh  dev_open.sh  diagnostic.sh  install_and_open_viceroy.sh  rebuild.sh  run.sh  serve_ui.py  tauri.conf.json  test_build.sh  viceroy-sync-server.db
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-assign.yml  auto-label.yml  ci.yml  release.yml  stale.yml
Viceroy.app/Contents/: Info.plist
Viceroy.app/Contents/MacOS/: Viceroy
docs/: index.html  installing.md  issues.md  obsidian-integration.md  roadmap.md  script.js  styles.css  sync-model.md  sync-server.md  troubleshooting.md
docs/download/: index.html
icons/: generate_icon.sh  icon.icns
perf/: generate_clipboard_dataset.py  profiling-plan-and-prs.md  run_profiling.sh
pr-diffs/: PR1-retention.patch  PR2-search-debounce.patch  PR3-monitor-interval.patch  PR4-lru-cache.patch  PR5-lazy-image-offrow.patch  PR6-virtualized-ui.patch
scripts/: build_macos_dmg.sh  mock_update_server.py  pre-commit  setup-dev.sh  windows_installer.iss
src/: app_launcher.rs  calculator.rs  cli_app.rs  clipboard.rs  clipboard_count.rs  database.rs  dictionary.rs  emoji.rs  file_search.rs  lib.rs  logo.rs  macos_app.rs  macos_search.rs  main.rs  main_tauri.rs  obsidian.rs  search_engine.rs  settings.rs  sync.rs  sync_server.rs  system_commands.rs  updater.rs  usage.rs  web_search.rs  windows_app.rs  windows_dwm.rs  windows_hotkey.rs  windows_hotkey_log.rs  windows_hwnd.rs  windows_icon.rs  windows_native_glass.rs  windows_preview.rs  windows_style.rs
src/ui/: clipboard_view.rs  helpers.rs  mod.rs  search_preview.rs  settings_view.rs  state.rs  table.rs
src_tauri_backup/: app_launcher.rs  calculator.rs  clipboard.rs  database.rs  dictionary.rs  emoji.rs  file_search.rs  main.rs  search_engine.rs  settings.rs  system_commands.rs  web_search.rs
tests/: sync_e2e.rs  updater_integration.rs
ui/: debug.html  index.html  index.html.backup
