[package]
name = "viceroy"
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["Viceroy Team"]
description = "Lightweight productivity launcher with native macOS and Windows frontends"
repository = "https://github.com/taleog/Viceroy"
license = "MIT"
readme = "README.md"

[dependencies]
# Cross-platform backend
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
fuzzy-matcher = "0.3"
rusqlite = { version = "0.30", features = ["bundled"] }
arboard = "3.3"
png = "0.17"
base64 = "0.21"
blake3 = "1.5"
meval = "0.2"
chrono = "0.4"
regex = "1.10"
dirs = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"
urlencoding = "2.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
sha2 = "0.10"
walkdir = "2.5"
futures-util = "0.3"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
axum = { version = "0.8.8", features = ["ws"] }

[target.'cfg(target_os = "macos")'.dependencies]
cacao = "0.4.0-beta2"
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
core-foundation = "0.9"
core-graphics = "0.23"
dispatch = "0.2"
global-hotkey = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
eframe = "0.33.3"
rfd = "0.15"
raw-window-handle = "0.6.2"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_Storage_FileSystem",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = false
panic = "abort"

[profile.dev]
opt-level = 0

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
